Fix spacing between nav link & dropdown arrow

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -164,7 +164,7 @@
                         }
 
                         @include breakpoint-up-xxl {
-                            margin-left: 5.355px;
+                            margin-left: 8.355px;
                         }
     
                     }
